shooting stars in the background now

--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,23 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Is the end near?</title>
-    <!-- Added this line below to see if I can make the cards work -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <section id="stars">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
   </body>
-  <!-- <section> -->
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  <!-- </section> -->
 </html>
