--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created to see when a stellar body is going to crash to earth"
+      content="Web site created with love by Violeta to see when a stellar body is going to crash to earth"
     />
+    <!-- Added this meta to see if deployed version works now -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+    <!--  ^^  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Is the end near?</title>
     <link rel="stylesheet" href="index.css" />
