changed wording a little bit

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created with love by Violeta to see when a stellar body is going to crash to earth"
     />
-    <!-- Added this meta to see if deployed version works now -->
+    <!-- Added this meta for second fetch for deployment -->
     <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
