see if deployed version error is fixed

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!--  ^^  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Is the end near?</title>
-    <link rel="stylesheet" href="./../src/index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <section id="stars">
